# agiens-chat-hackaton

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  deps.py  main.py  redis_client.py
backend/app/api/: accounts.py  agents.py  auth.py  chats.py  tickets.py  voice_temp.py
backend/app/auth/: __init__.py  jwt_handler.py  telegram_verify.py
backend/app/llm/: __init__.py  base.py  openrouter.py  registry.py
backend/app/mcp/: __init__.py  playwright_client.py  zapier_client.py
backend/app/schemas/: agent.py  chat.py  ticket.py
backend/app/services/: chat_service.py  support_orchestration.py
backend/app/storage/: __init__.py  db.py  models.py  repositories.py
backend/app/voice/: __init__.py  elevenlabs_client.py
bots/telegram/: README.md  bot.py  requirements.txt
docs/: ELEVENLABS-VPN.md  NGINX-SSL.md
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/chat/: ChatArea.tsx  ConnectChannelCard.tsx  ModelSelector.tsx  RightPanel.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/types/: chat.ts
nginx/: nginx-http-bootstrap.conf  nginx.conf
