[project]
name = "agiens-backend"
version = "0.1.0"
description = "Universal chat API with pluggable LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "elevenlabs>=1.0.0",
    "mcp>=1.0.0",
    "PyJWT>=2.8.0",
]

[tool.uv]
dev-dependencies = []
